# lhotse-dataset

./: .gitignore  Makefile  README.md  pyproject.toml  write_shar.sh.o515985
.github/workflows/: lint.yml
config/: default.yaml
config/data/: callfriend_jp.yaml  callhome_en.yaml  callhome_jp.yaml  demand.yaml  jsut.yaml  libri2mix.yaml  libri2mix_clean.yaml  libri2mix_with_noise.yaml  librispeech.yaml  libritts_r.yaml  libritts_r_mix_clean.yaml  libritts_r_mix_large.yaml  mit_environmental_impulse_responses.yaml  seamless_interaction.yaml  wham_noise.yaml
scripts/: create_libritts_r_mix_metadata.py  load_shar.py  write_shar.py
src/lhotse_dataset/: __init__.py  base.py  callfriend_jp.py  callhome_en.py  callhome_jp.py  daily_talk.py  daily_talk_test.py  demand.py  hi_fi_captain.py  hi_fi_captain_test.py  hq_youtube.py  hq_youtube_test.py  jis.py  jis_test.py  jsut.py  jsut_test.py  jvnv.py  jvnv_test.py  jvs.py  jvs_test.py  libri2mix.py  libri2mix_clean.py  libri2mix_with_noise.py  librimix.py  librispeech.py  librispeech_test.py  libritts_r.py  libritts_r_mix_clean.py  libritts_r_mix_large.py  mit_environmental_impulse_responses.py  reazon_speech.py  reazon_speech_test.py  seamless_interaction.py  utils.py  wham_noise.py
src/lhotse_dataset/data/libritts_r_mix/: dev-clean.csv  librittsr2mix_dev-clean.csv  librittsr2mix_test-clean.csv  librittsr2mix_train-clean-100.csv  test-clean.csv  train-clean-100.csv  train-clean-360.csv
src/lhotse_dataset/data/libritts_r_mix_large/: dev-clean.csv  dev_clean.csv  test-clean.csv
tests/: test_callfriend_jp.py  test_callhome_en.py  test_callhome_jp.py  test_daily_talk.py  test_demand.py  test_hi_fi_captain.py  test_hq_youtube.py  test_jis.py  test_jsut.py  test_jvnv.py  test_jvs.py  test_libri2mix.py  test_libri2mix_clean.py  test_libri2mix_with_noise.py  test_librimix.py  test_librispeech.py  test_libritts_r.py  test_libritts_r_mix_clean.py  test_libritts_r_mix_large.py  test_mit_environmental_impulse_responses.py  test_reazon_speech.py  test_seamless_interaction.py  test_wham_noise.py
