[project]
name = "lhotse-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Kohei ASAI", email = "ko2001he@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.4.1",
    "gdown>=5.2.0",
    "lhotse>=1.29.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lhotse_dataset"]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
exclude = [".venv"]
indent-width = 4
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"
