[project]
name = "lhotse-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Kohei ASAI", email = "ko2001he@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "gdown>=5.2.0",
    "gitpython>=3.1.44",
    "hydra-core>=1.3.2",
    "lhotse>=1.30.3",
    "omegaconf>=2.3.0",
    "pydantic>=2.11.7",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lhotse_dataset"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.ruff]
exclude = [".venv"]
indent-width = 4
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "-vv --tb=short -s"
